--- a/templates/home.html
+++ b/templates/home.html
@@ -29,13 +29,13 @@
     <nav class="nav">
         <a id="wName" style="display:none">𝕎𝔼𝕃ℂ𝕆𝕄𝔼</a>
         <a id="current-user"></a>
-        <a id ="homePage" href = "/" onclick="e.preventDefault();" class="nav__link">ℍ𝕠𝕞𝕖ℙ𝕒𝕘𝕖</a>
-        <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">ℝ𝕖𝕘𝕚𝕤𝕥𝕖𝕣</a>
-        <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">𝕃𝕠𝕘𝕀𝕟</a>
-        <a id ="post" onclick="refreshPosts() ;" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a>
-        <a id="logout" href="/" onclick="Logout() ;" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>   
+        <a id ="homePage" href = "/" onclick="e.preventDefault();" class="nav__link">ℍ𝕆𝕄𝔼-ℙ𝔸𝔾𝔼</a>
+        <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">ℝ𝔼𝔾𝕀𝕊𝕋𝔼ℝ</a>
+        <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">𝕃𝕆𝔾-𝕚ℕ</a>
+        <!-- <a id ="post" onclick="refreshPosts() ;" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a> -->
+        <a id="logout" href="/" onclick="Logout() ;" class="nav__link" style="display:none">𝕃𝕆𝔾-𝕆𝕌𝕋</a>   
 
-        <a id="profile" class="nav__link" style="display:none" onclick="showHideUserProfile() ;">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a> 
+        <a id="profile" class="nav__link" style="display:none" onclick="showHideUserProfile() ;">ℙℝ𝕆𝔽𝕀𝕃𝔼</a> 
 
          <!-- happy face emoji's -->
     <a id="happyFace" style="display:none">
@@ -100,7 +100,7 @@
         <a id="usersLog" class="loggedInUsers" style="display:none"><strong>𝕌𝕊𝔼ℝ𝕊 𝕆ℕ𝕃𝕀ℕ𝔼</strong></a>
         <a id="Offline" class="OfflineUsers" style="display:none"><strong>𝕌𝕊𝔼ℝ𝕊 𝕆𝔽𝔽𝕃𝕀ℕ𝔼</strong></a> -->
 
-        <nav class="loggedInUsers" id="chatNav">
+        <nav class="loggedInUsers" id="chatNav" style="display:block">
         <a id="welcomemsg">𝕎𝔼𝕃ℂ𝕆𝕄𝔼 𝕋𝕆 ℝ𝔼𝔸𝕃 𝕋𝕀𝕄𝔼 𝔽𝕆ℝ𝕌𝕄 𝕃𝕆𝔾𝕀ℕ 𝕆ℝ ℝ𝔼𝔾𝕀𝕊𝕋𝔼ℝ!</a>
 
             <a id="Select User" class="loggedInUsers__link" data-link style="display:none"
